[package]
name = "stylus-ink-bench"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "stylus-ink-bench"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.12.6" }
clap = { version = "4.5.32", features = ["derive"] }
eyre = "0.6.12"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
